gitops/argocd/applications/kubeden-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeden-api
  labels:
    app: kubeden-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubeden-api
  template:
    metadata:
      labels:
        app: kubeden-api
    spec:
      containers:
      - name: kubeden-api
        image: registry.digitalocean.com/kubeden/kubeden-api:3ca7718
        ports:
        - containerPort: 8080
